# tws-drogon-docker-template

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  main.cc
.cursor/skills/drogon-cpp-engineer/: SKILL.md
.cursor/skills/ibkr-tws-cpp-engineer/: SKILL.md
cmake/tws-sdk/: client-CMakeLists.txt  twsapiConfig.cmake.in  twsapiConfigVersion.cmake.in
controllers/messaging/: messaging_controller.cc  messaging_controller.h
controllers/orders/: orders_controller.cc  orders_controller.h
controllers/pricing/: pricing_controller.cc  pricing_controller.h
ibkr/: ibkr_probe.cc  ibkr_probe.h
include/controllers/: messaging_controller.h  orders_controller.h  pricing_controller.h
include/ibkr/: client_pool.h  connection_slot.h
include/messaging/: amqp_trantor_handler.h  messaging_registry.h
messaging/: amqp_trantor_handler.cc  broker_config.h  message_broker.h  messaging_registry.cc  rabbitmq_broker.h
src/: main.cc
src/controllers/: messaging_controller.cc  orders_controller.cc  pricing_controller.cc
src/ibkr/: client_pool.cc  connection_slot.cc
src/messaging/: broker_config.cc  message_broker.cc  rabbitmq_broker.cc
